tests/eval_trace_main_fail.hop
// Verifies evaluator failures in main include a call trace.
import "testing" { FailingAllocator }

fn main() {
	context.allocator = FailingAllocator{}
	new i32
}
